tests/purs/failing/UnsupportedFFICommonJSExports1.out
Error found:
at tests/purs/failing/UnsupportedFFICommonJSExports1.purs:2:1 - 5:29 (line 2, column 1 - line 5, column 29)

  The following CommonJS exports are not supported in the ES foreign module for module [33mMain[0m:

    no



See https://github.com/purescript/documentation/blob/master/errors/UnsupportedFFICommonJSExports.md for more information,
or to contribute content related to this error.

